--- a/style.css
+++ b/style.css
@@ -1,28 +1,147 @@
-import './style.css';
-
-Rebilly.initialize({
-  // Use your own publishable key:
-  publishableKey: 'pk_sandbox_Lvl5rm8lLrtAV6iSL3CIdYLAburumF4Ld8b1KDs'
-});
-
-const form = document.querySelector('form');
-
-Rebilly.on('ready', function() {
-  const card = Rebilly.card.mount('#mounting-point');
-  //Here you can inspect your first mounted Framepay element
-  console.log('💳 Payment card element: ', card);
-});
-
-form.onsubmit = async function(e) {
-  e.preventDefault();
-  e.stopPropagation();
-  // create a token from the fields within a form
-  try {
-    const paymentToken = await Rebilly.createToken(form);
-    // Use this paymentToken in your subsequent Rebilly API calls to complete your checkout process
-    console.log(paymentToken);
-  } catch (error) {
-    // Inspect this error to understand why the token creation failed
-    console.log('❌ Create token error:', error);
+html {
+    height: 100%;
   }
-};
+  
+  body {
+    background-color: #ffffff;
+    height: 100%;
+    margin: 0;
+  }
+  
+  .container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    border-radius: 8px;
+    -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1) inset;
+    -moz-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1) inset;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1) inset;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .example-2 {
+    max-width: 500px;
+    width: 100%;
+    font-family: Roboto, Open Sans, Segoe UI, sans-serif;
+    padding: 20px;
+    box-sizing: border-box;
+    border-radius: 8px;
+  }
+  
+  .example-2 * {
+    font-family: Roboto, Open Sans, Segoe UI, sans-serif;
+  }
+  
+  .example-2 fieldset {
+    border: none;
+    margin: 0 0 40px 0;
+    padding: 0;
+  }
+  
+  .example-2 .field + .field {
+    margin-top: 10px;
+  }
+  
+  .example-2 label {
+    display: block;
+    margin-bottom: 8px;
+  }
+  
+  .example-2 input,
+  .example-2 button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+    border-style: none;
+  }
+  
+  .example-2 input {
+    border: none;
+    border-radius: 4px;
+    font-size: 15px;
+    margin: 0;
+    outline: 0;
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    background-color: #e8eeef;
+    color: #8a97a0;
+    -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
+    -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
+  }
+  
+  .example-2 input:focus {
+    background: #d2d9dd;
+    color: #000000;
+  }
+  
+  .example-2 input:-webkit-autofill {
+    -webkit-text-fill-color: #000;
+    transition: background-color 100000000s;
+    -webkit-animation: 1ms void-animation-out;
+  }
+  
+  .example-2 input::-webkit-input-placeholder {
+    color: #8a97a0;
+  }
+  
+  .example-2 input::-moz-placeholder {
+    color: #8a97a0;
+  }
+  
+  .example-2 input:-ms-input-placeholder {
+    color: #8a97a0;
+  }
+  
+  .example-2 button {
+    position: relative;
+    border: none;
+    display: block;
+    padding: 19px 39px 18px 39px;
+    color: #fff;
+    margin: 0 auto;
+    border-radius: 30px;
+    background: #1abc9c;
+    font-size: 18px;
+    text-align: center;
+    font-style: normal;
+    width: 100%;
+    box-shadow: 0 10px 30px 0 rgba(26, 188, 156, 0.5);
+    -moz-box-shadow: 0 10px 30px 0 rgba(26, 188, 156, 0.5);
+    -webkit-box-shadow: 0 10px 30px 0 rgba(26, 188, 156, 0.5);
+    -o-box-shadow: 0 10px 30px 0 rgba(26, 188, 156, 0.5);
+    -ms-box-shadow: 0 10px 30px 0 rgba(26, 188, 156, 0.5);
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+  }
+  
+  .example-2 button:hover {
+    background: #000000;
+    box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.2);
+    -o-box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.2);
+    -ms-box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+  }
+  
+  .example-2 .rebilly-framepay {
+    background: #e8eeef;
+    height: 38px;
+    border: none;
+    -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
+  }
+  
+  .example-2 .rebilly-framepay.rebilly-framepay-focus {
+    background: #d2d9dd;
+  }
+  
